<resources>
    <string name="app_name">KeepBalanced</string>
    <string name="capital_total_invertido">Capital Total Invertido</string>
    <string name="general">General</string>
    <string name="renta_fija">Renta Fija</string>
    <string name="renta_variable">Renta Variable</string>
    <string name="oro">Oro</string>
    <string name="_12_nov">12 Nov</string>
    <string name="_10_000">10.000 €</string>
    <string name="_1m">1M</string>
    <string name="_6m">6M</string>
    <string name="_1a">1A</string>
    <string name="todo">Todo</string>
    <string name="distribuci_n_de_cartera">Distribución de Cartera</string>
    <string name="variable">Variable</string>
    <string name="fija">Fija</string>
    <string name="mes_siguiente">Mes siguiente</string>
    <string name="noviembre_2025">Noviembre 2025</string>
    <string name="mes_anterior">Mes anterior</string>
    <string name="boton_previo">Boton previo</string>
    <string name="bot_n_siguiente">Botón siguiente</string>
    <string name="_0_00">0,00 €</string>
    <string name="ingresos_mensuales">Ingresos Mensuales</string>
    <string name="gastos_mensuales">Gastos Mensuales</string>
    <string name="evoluci_n_diaria">Evolución Diaria</string>
    <string name="desglose_de_gastos">Desglose de Gastos</string>
    <string name="ver_m_s_movimientos">Ver más movimientos</string>
    <string name="historial_completo">Historial Completo</string>
    <string name="filtrar">Filtrar</string>
    <string name="todos">Todos</string>
    <string name="gastos">Gastos</string>
    <string name="ingresos">Ingresos</string>
    <string name="cargar_10_m_s">Cargar 10 más</string>
    <string name="boton_flotante">Boton flotante</string>
    <string name="cerrar_historial">Cerrar historial</string>
    <string name="ltimos_movimientos">Últimos movimientos</string>
    <string name="_0">0€</string>
    <string name="balance_actual">Balance Actual</string>
    <string name="semana_1_1_7">Semana 1 (1–7)</string>
    <string name="cargando">Cargando…</string>
</resources>